# gamgee

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  Jamroot  LICENSE  README.md  _config.yml  index.html  index.md  makefile  params.json  travis.sh
.travis_scripts/: boost.sh  clang.sh  cmake.sh  coveralls.sh  gcc.sh  update_website_dox.sh
_posts/: 2014-09-24-htslib-tracking-policy.md  2014-09-24-setting-up-your-development-environment.md
contrib/: htslib.cmake
doxygen/: _2home_2travis_2build_2broadinstitute_2gamgee_2build_2contrib_2htslib_2src_2htslib_2htslib_2hts_8h-example.html  _8ycm__extra__conf_8py.html  _amiga_o_s_8c.html  _boost_build_8py.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _mac_o_s_8c.html  _mac_o_s___test__config_8h.html  _mac_o_s___test__config_8h_source.html  _mac_o_s__config_8h.html  _mac_o_s__config_8h_source.html  _mock_toolset_8py.html  _r_e_a_d_m_e_8md.html  _test_cmd_8py.html  a_8hpp.html  a_8hpp_source.html  a__gcc_8cpp.html  abs__workdir_8py.html  absolute__sources_8py.html  add__gc__prefix_8c.html  allchblk_8c.html  alloc_8c.html  alternatives_8py.html  annotated.html  app_8cpp.html  arrow_8cpp.html  arrow_8h.html  arrow_8h_source.html  asm_8py.html  backgraph_8c.html  bad__dirname_8py.html  bar_8cpp.html  base__quals_8cpp.html  base__quals_8h.html  base__quals_8h_source.html  bgzf_8c.html  bgzf_8h.html  bgzf_8h_source.html  bgzip_8c.html  blacklst_8c.html  (+2350 more)
doxygen/html/: _8ycm__extra__conf_8py.html  _amiga_o_s_8c.html  _boost_build_8py.html  _mac_o_s_8c.html  _mac_o_s___test__config_8h.html  _mac_o_s___test__config_8h_source.html  _mac_o_s__config_8h.html  _mac_o_s__config_8h_source.html  _test_cmd_8py.html  (+1740 more)
gamgee/: CMakeLists.txt  base_quals.cpp  base_quals.h  cigar.cpp  cigar.h  diploid_pl_genotype.h  exceptions.h  fastq.cpp  fastq.h  fastq_iterator.cpp  fastq_iterator.h  fastq_reader.cpp  fastq_reader.h  gamgee.h  genotype.cpp  genotype.h  genotype_field_value.h  genotype_field_value_iterator.h  hts_memory.cpp  hts_memory.h  indexed_sam_iterator.cpp  indexed_sam_iterator.h  indexed_sam_reader.h  indexed_variant_iterator.cpp  indexed_variant_iterator.h  indexed_variant_reader.h  individual_field.h  individual_field_iterator.h  individual_field_value.h  individual_field_value_iterator.h  interval.cpp  interval.h  is_missing.cpp  is_missing.h  missing.h  multiple_variant_iterator.cpp  multiple_variant_iterator.h  multiple_variant_reader.h  read_bases.cpp  read_bases.h  (+69 more)
gamgee/sam/: base_quals.cpp  cigar.cpp  header_comment.cpp  header_comment.h  header_line.cpp  header_line.h  indexed_sam_iterator.cpp  indexed_sam_iterator.h  indexed_sam_reader.h  program.cpp  program.h  read_bases.cpp  read_group.cpp  read_group.h  sam.cpp  sam.h  sam_builder.cpp  sam_builder.h  sam_builder_data_field.cpp  sam_header.cpp  sam_header.h  sam_header_builder.cpp  sam_header_builder.h  sam_iterator.cpp  sam_pair_iterator.cpp  sam_reader.h  sam_tag.cpp  sam_tag.h  sam_writer.cpp  sam_writer.h
gamgee/utils/: file_utils.cpp  file_utils.h  format_field_type.cpp  format_field_type.h  genotype_utils.cpp  genotype_utils.h  hts_memory.cpp  hts_memory.h  merged_vcf_lut.cpp  merged_vcf_lut.h  sam_tag_utils.cpp  sam_tag_utils.h  sam_utils.cpp  sam_utils.h  short_value_optimized_storage.h  utils.cpp  utils.h  variant_field_type.cpp  variant_field_type.h  variant_utils.cpp  variant_utils.h
gamgee/variant/: genotype.cpp  genotype.h  indexed_variant_iterator.cpp  indexed_variant_iterator.h  indexed_variant_reader.h  individual_field.h  individual_field_iterator.h  individual_field_value.h  individual_field_value_iterator.h  multiple_variant_reader.h  reference_block_splitting_variant_iterator.cpp  shared_field.h  shared_field_iterator.h  synced_variant_iterator.h  synced_variant_reader.h  variant.cpp  variant.h  variant_builder.cpp  variant_builder_individual_field.h  variant_builder_individual_region.h  variant_builder_multi_sample_vector.h  variant_builder_shared_region.cpp  variant_builder_shared_region.h  variant_filters.h  variant_filters_iterator.h  variant_header.cpp  variant_header.h  variant_header_builder.cpp  variant_header_builder.h  variant_header_merger.cpp  variant_header_merger.h  variant_iterator.cpp  variant_iterator.h  variant_reader.h  variant_writer.cpp  variant_writer.h
lib/: Jamfile
scripts/: sub_up.sh
src/: sam.cpp  sam.h  sam_body.cpp  sam_body.h  sam_header.cpp  sam_header.h  sam_iterator.cpp  sam_iterator.h  sam_pair_iterator.cpp  sam_pair_iterator.h  sam_reader.h  sam_writer.cpp  sam_writer.h
test/: .sam_body_test.cpp.swp  CMakeLists.txt  Jamfile  cigar_test.cpp  fastq_reader_test.cpp  fastq_test.cpp  genotypes_test.cpp  header_comment_test.cpp  header_line_test.cpp  indexed_sam_reader_test.cpp  indexed_variant_reader_test.cpp  interval_test.cpp  missing_test.cpp  multiple_variant_reader_test.cpp  program_test.cpp  read_group_test.cpp  reference_block_splitting_variant_reader_test.cpp  reference_map_test.cpp  reference_test.cpp  sam_body_test.cpp  sam_builder_test.cpp  sam_header_builder_test.cpp  sam_header_test.cpp  sam_reader_test.cpp  sam_test.cpp  sam_window_reader_test.cpp  select_if_test.cpp  short_value_optimized_storage_test.cpp  synced_variant_reader_test.cpp  test_utils.h  utils_test.cpp  variant_builder_multi_sample_vector_test.cpp  variant_builder_test.cpp  variant_header_test.cpp  variant_reader_test.cpp  variant_test.cpp
testdata/: complete_same_seq.fa  complete_same_seq.fq  extra_header.vcf  missing_header.vcf  synced_sparse_1.vcf.gz.csi  synced_sparse_2.vcf.gz.csi  test.g.bcf  test.g.vcf  test_bed.bed  test_clean.fq  test_gatk.intervals  test_mixed.loc  test_paired.bam  test_paired.sam  test_picard.interval_list  test_reference.fa  test_reference2.fa  test_simple.bam  test_simple.bam.bai  test_simple.sam  test_singletons.intervals  test_variants.bcf  test_variants.vcf  test_variants_02.vcf  test_variants_alternate_ploidy.vcf  test_variants_for_variantbuilder.vcf  test_variants_missing_data.vcf  test_variants_mixed_ploidy.vcf  test_variants_multiple_alt.vcf
(+349 files in other folders)
